ajout de template et passage de données à la vue

--- a/views/movie-details.ejs
+++ b/views/movie-details.ejs
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../public/style.css">
 </head>
 <body>
-<h1>Express Movies : le site des cinéphiles</h1>
+<h1>Les détails du film <%= movieId %> : <%= movietitle %></h1>
 <div>
-    Etes-vous plutôt films ou séries ? Peu importe, vous trouverez içi votre bonheur dans les deux cas.
+    Le film <%= movietitle %> est vraiment Waaaaaaaaaaaaaaaaaaaaaou  !!!
 </div>
     
 </body>
