--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../public/style.css">
 </head>
 <body>
-<h1>Express Movies : le site des cinéphiles</h1>
+<h1>La liste des films cultes !!</h1>
 <div>
-    Etes-vous plutôt films ou séries ? Peu importe, vous trouverez içi votre bonheur dans les deux cas.
+    Youuuuuuuuuuuuuuupiiiiii !!!
 </div>
     
 </body>
