--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,18 @@
     <title>Movies Express</title>
     <link rel="stylesheet" href="../public/style.css">
 </head>
+
 <body>
+    <div class="central">
+    <%- include('./partials/header'); %>
+
 <h1>Express Movies : le site des cinéphiles</h1>
+
 <div>
     Etes-vous plutôt films ou séries ? Peu importe, vous trouverez içi votre bonheur dans les deux cas.
 </div>
     
+</div>
+<%- include('./partials/footer'); %>
 </body>
 </html>
